# sfml-learn

./: .envrc  CMakeLists.txt  dev.nix  flake.nix  mingwtest.nix  sfml-learn.nix  win.nix
msvc/: TC-win.cmake
src/: ball.cpp  border.cpp  entity.cpp  main.cpp  soundpool.cpp
